<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/svLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/svLLCell1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_17dp"
                android:textColor="@color/lightBlueColor"
                android:textSize="@dimen/textSize15sp" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_17dp"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_1dp"
                android:textColor="@color/lightBlueColor"
                android:textSize="@dimen/textSize12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/svLLCell2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/lightOrangeColor"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phonetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_13dp"
                    android:layout_marginStart="@dimen/dimen_13dp"
                    android:text="@string/phone"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="@dimen/textSize12sp" />

                <TextView
                    android:id="@+id/timeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_13dp"
                    android:layout_marginStart="@dimen/dimen_13dp"
                    android:text="@string/time"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="@dimen/textSize12sp" />

                <TextView
                    android:id="@+id/statusTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_13dp"
                    android:layout_marginStart="@dimen/dimen_13dp"
                    android:text="@string/status"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="@dimen/textSize12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
