<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svCordLyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/appbar"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/edtxtHintColor"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@color/silverColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noExtraCosts"
                    android:textColor="#4b4f54"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:textSize="@dimen/textSize16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brokerage"
                    android:textColor="#4b4f54"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/textSize14sp"
                    android:layout_margin="@dimen/dimen_5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_15dp"
                    android:padding="@dimen/dimen_10dp"
                    android:orientation="vertical"
                    android:background="@drawable/custom_rectangle">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/edtxtHintColor"
                        app:hintTextAppearance="@style/textInputLabel"
                        android:layout_marginLeft="@dimen/dimen_2dp"
                        android:layout_marginStart="@dimen/dimen_2dp"
                        android:layout_marginRight="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_2dp">

                        <EditText
                            android:id="@+id/edtxtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textColorHint="@color/edtxtHintColor"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textSize16sp"
                            android:inputType="text"
                            android:hint="@string/name" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/edtxtHintColor"
                        app:hintTextAppearance="@style/textInputLabel"
                        android:layout_marginLeft="@dimen/dimen_2dp"
                        android:layout_marginStart="@dimen/dimen_2dp"
                        android:layout_marginRight="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_2dp">

                        <EditText
                            android:id="@+id/edtxtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textColorHint="@color/edtxtHintColor"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textSize16sp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/edtxtHintColor"
                        app:hintTextAppearance="@style/textInputLabel"
                        android:layout_marginLeft="@dimen/dimen_2dp"
                        android:layout_marginStart="@dimen/dimen_2dp"
                        android:layout_marginRight="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_2dp">

                        <EditText
                            android:id="@+id/edtxtMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textColorHint="@color/edtxtHintColor"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textSize16sp"
                            android:inputType="phone"
                            android:hint="@string/phone" />
                    </android.support.design.widget.TextInputLayout>


                    <Spinner
                        android:id="@+id/svStatusSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_45dp"
                        android:layout_margin="@dimen/dimen_5dp"
                        android:background="@drawable/gradient_spinner"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/dateSpinner"
                            android:layout_width="@dimen/dimen_0dp"
                            android:layout_height="@dimen/dimen_45dp"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/dimen_5dp"
                            android:background="@drawable/gradient_spinner"/>

                        <Spinner
                            android:id="@+id/timeSpinner"
                            android:layout_width="@dimen/dimen_0dp"
                            android:layout_height="@dimen/dimen_45dp"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/dimen_5dp"
                            android:background="@drawable/gradient_spinner"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/svBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheduleVisit"
                    android:textColor="@drawable/sv_btn_text_color_selector"
                    android:textSize="@dimen/textSize16sp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:layout_marginEnd="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_15dp"
                    android:layout_marginBottom="@dimen/dimen_15dp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:background="@drawable/sv_btn_selector"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>